setup-openwebui/shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm-inference
  labels:
    name: vllm-inference
    component: shared-services
    app.kubernetes.io/part-of: openwebui-platform
